<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidLogin</string>
    
    <!-- Text in login form -->
    <string name="user">User Name</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    
    <!-- Options hide menu -->
    <string name="help">Ayuda</string>
    <string name="logout">Logout</string>
    
    <!-- Option main menu-->
    <string name="horario">Horario</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="contactos">Contactos</string>
    <string name="avisos">Avisos de la Universidad</string>
    
    <!-- Decription for images -->
    <string name="desc">arrow_right</string>
    <string name="texto">Ejemplo de una tabla en Android</string>
    <string name="action_settings">Settings</string>
    
    <!-- Decription for tabs -->
    <string name="tabAvisos">Avisos Pricipales</string>
    <string name="tabConsejoAcademico">Consejo Academico</string>
    <string name="tabActividades">Agenda de actividades Academicas y Culturales</string>
    <string name="tabDivisiones">Divisiones Academicas</string>
    
    <!-- Details for tabs -->
    <string name="detalles">Detalles .....</string>
    
    <!-- Text in biblioteca login form -->
    <string name="Bibliotecauser">Matricula</string>
    <string name="Bibliotecapassword">Password</string>
    <string name="BibliotecabtnLogin">Enviar</string>
</resources>
